Adiciona README.md

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "IgtiProject",
-    "slug": "IgtiProject",
+    "name": "Igti Companies",
+    "slug": "Igti Companies",
     "platforms": [
       "ios",
       "android",
