--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "api": "json-server --watch -p 4000 db.json",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
